# astc-crash

./: CMakeLists.txt  astc_decoder.h  astc_decoder.spv  main.cpp
